Fixed missing gaps in Spotlight.

--- a/web/themes/custom/drevops/components/00-base/spotlight/spotlight.scss
+++ b/web/themes/custom/drevops/components/00-base/spotlight/spotlight.scss
@@ -19,9 +19,9 @@
 }
 
 .ct-spotlight {
-  > * {
-    > * {
-      height: 100%;
-    }
+  > * > *,
+  > .grid-xxs-1-1 > * > *,
+  > [class^='grid'] > * > * {
+    height: 100%;
   }
 }
